# BiomeBloom

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
C++/: Atom.hh  Button.hh  CMakeLists.txt  Canvas.cc  Canvas.hh  DAtom.hh  GameUI.cc  GameUI.hh  MouseInfo.hh  Renderer.cc  Renderer.hh  Types.hh  program.cc  rust_functions.h
data/: default.png.kra  mud_shader.glsl  proj.kra  water.glsl
data/shaders/: aigua.glsl  foc.glsl  formiga.glsl  herba.glsl  terra.glsl
rust_side/: Cargo.toml
rust_side/src/: lib.rs  position.rs  rules.rs  shaders.rs
scripts/: linux_deps.sh
